--- a/index.html
+++ b/index.html
@@ -4,11 +4,12 @@
 </head>
 <body>
 
-<canvas id="canvas" style="border: solid 1px #000"></canvas>
+<canvas id="canvas" style="border: solid 1px #000;"></canvas>
 
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
+<script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </body>
