--- a/index.html
+++ b/index.html
@@ -8,6 +8,7 @@
 
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/SceneManager.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
 <script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
