adds snapping for fast positioning
bug fixes in transform tools

separate manipulation of x and y parameters

--- a/index.html
+++ b/index.html
@@ -11,6 +11,7 @@
 		left: 5%;
 		top: 10%;
 		border: solid 1px #000;
+		/*cursor: none;*/
 	}
 	#toolbar{
 		position: absolute;
@@ -23,7 +24,7 @@
 		padding: 0 0;
 	}
 	li{
-		background: #000;
+		background: #111;
 		width: 100%;
 		margin: 0 0;
 		padding: 0 0;
@@ -69,6 +70,12 @@
 </ul>
 
 </div>
+
+<div id="setPosition">
+<input type="text" id="pos_x">
+<input type="text" id="pox_y">	
+</div>
+
 
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
