adds sprite rendering for bodies

--- a/index.html
+++ b/index.html
@@ -72,16 +72,16 @@
 </div>
 
 <div id="setPosition">
-<input type="text" id="pos_x">
-<input type="text" id="pox_y">	
+x: <input type="text" id="pos_x" size="4">
+y: <input type="text" id="pos_y" size="4">
 </div>
 
 
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
+<script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/SceneManager.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
-<script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/main.js"></script>
 
 </body>
