--- a/index.html
+++ b/index.html
@@ -92,6 +92,7 @@ y: <input type="text" id="pos_y" size="4">
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/handlebars.js"></script>
 <script type="text/javascript" src="js/box2d.js"></script>
+<script type="text/javascript" src="js/PolygonHelper.js"></script>
 <script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/SceneManager.js"></script>
 <script type="text/javascript" src="js/Viewport.js"></script>
