adds joints loading and saving scene

--- a/index.html
+++ b/index.html
@@ -17,7 +17,7 @@
 			File
 			<ul id="fileMenu">
 				<li><a href="#" data-event="newScene">New Scene</a></li>
-				<li><a href="#" data-event="loadScene">Load Scene</a></li>
+				<li><a href="#" data-event="loadScene">Load Scene</a><input type="file" id="loadScene" style="visibility:hidden;height:0px;"></li>
 				<li><a href="#" data-event="saveScene">Save</a></li>
 				<li><a href="#" data-event="exportWorld">Export Scene</a></li>
 				<li><a href="#" data-event="exportSelection">Export Selection</a></li>
