--- a/index.html
+++ b/index.html
@@ -5,6 +5,7 @@
 <link rel="icon" type="image/png" href="resources/title_icon.png">
 <link rel="stylesheet" type="text/css" href="css/reset.css">
 <link rel="stylesheet" type="text/css" href="css/hint.css">
+<link rel="stylesheet" type="text/css" href="css/bootstrap.min.css">
 <link rel="stylesheet" type="text/css" href="css/style.css">
 </head>
 <body>
@@ -12,79 +13,83 @@
 <canvas id="canvas"></canvas>
 
 <nav id="taskbar">
-	<ul id="taskbar_options">
-		<li>
-			File
-			<ul id="fileMenu">
-				<li><a href="#" data-event="newScene">New Scene</a></li>
-				<li><a href="#" data-event="loadScene">Load Scene</a><input type="file" id="loadScene" style="visibility:hidden;height:0px;"></li>
-				<li><a href="#" data-event="saveScene">Save</a></li>
-				<li><a href="#" data-event="exportWorld">Export Scene</a></li>
-				<li><a href="#" data-event="exportSelection">Export Selection</a></li>
-			</ul>
-		</li>
-		<li>
-			Add Body to Scene
-			<ul id="addToScene">
-				<li><a href="#" data-shape="0">Create Box</a></li>
-				<li><a href="#" data-shape="10">Create Circle</a></li>
-				<li><a href="#" data-shape="20">Create Box Polygon</a></li>
-				<li><a href="#" data-shape="21">Create Circle Polygon</a></li>
-				<li><a href="#" data-shape="30">Create Box Chain</a></li>
-				<li><a href="#" data-shape="31">Create Circle Chain</a></li>
-			</ul>
-		</li>
-		<li>
-			Add Shape to Body
-			<ul id="addToBody">
-				<li><a href="#" data-shape="0">Create Box Shape</a></li>
-				<li><a href="#" data-shape="10">Create Circle Shape</a></li>
-				<li><a href="#" data-shape="20">Create Box Polygon Shape</a></li>
-				<li><a href="#" data-shape="21">Create Circle Polygon Shape</a></li>
-				<li><a href="#" data-shape="30">Create Box Chain Shape</a></li>
-				<li><a href="#" data-shape="31">Create Circle Chain Shape</a></li>
-			</ul>
-		</li>
-		<li>
-			Create Joint
-			<ul id="createJoint">
-				<li><a href="#" data-type="0">Create Distance Joint</a></li>
-				<li><a href="#" data-type="1">Create Weld Joint</a></li>
-				<li><a href="#" data-type="2">Create Revolute Joint</a></li>
-				<li><a href="#" data-type="3">Create Wheel Joint</a></li>
-			</ul>
-		</li>
-	</ul>
+	<div class="dropdown">
+		<button class="btn btn-default dropdown-toggle" type="button" id="fileMenuDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    	File
+	  	</button>
+	    <ul class="dropdown-menu" aria-labelledby="fileMenuDropdown" id="fileMenu">
+			<li><a href="#" data-event="newScene">New Scene</a></li>
+			<li><a href="#" data-event="loadScene">Load Scene</a><input type="file" id="loadScene"></li>
+			<li><a href="#" data-event="saveScene">Save</a></li>
+			<li><a href="#" data-event="exportWorld">Export Scene</a></li>
+			<li><a href="#" data-event="exportSelection">Export Selection</a></li>
+		</ul>
+	</div>
+	<div class="dropdown">
+		<button class="btn btn-default dropdown-toggle" type="button" id="addBodyDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    	Create Body
+	  	</button>
+	    <ul class="dropdown-menu" aria-labelledby="addBodyDropdown" id="addToScene">
+			<li><a href="#" data-shape="0">Create Box</a></li>
+			<li><a href="#" data-shape="10">Create Circle</a></li>
+			<li><a href="#" data-shape="20">Create Box Polygon</a></li>
+			<li><a href="#" data-shape="21">Create Circle Polygon</a></li>
+			<li><a href="#" data-shape="30">Create Box Chain</a></li>
+			<li><a href="#" data-shape="31">Create Circle Chain</a></li>
+		</ul>
+	</div>
+	<div class="dropdown">
+		<button class="btn btn-default dropdown-toggle" type="button" id="addShapeDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    	Create Shape
+	  	</button>
+	    <ul class="dropdown-menu" aria-labelledby="addShapeDropdown" id="addToBody">
+			<li><a href="#" data-shape="00">Box Shape</a></li>
+			<li><a href="#" data-shape="10">Circle Shape</a></li>
+			<li><a href="#" data-shape="20">Box Polygon Shape</a></li>
+			<li><a href="#" data-shape="21">Circle Polygon Shape</a></li>
+			<li><a href="#" data-shape="30">Box Chain Shape</a></li>
+			<li><a href="#" data-shape="31">Circle Chain Shape</a></li>
+		</ul>
+	</div>
+	<div class="dropdown">
+		<button class="btn btn-default dropdown-toggle" type="button" id="addJointDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="true">
+	    	Create Joint
+	  	</button>
+	    <ul class="dropdown-menu" aria-labelledby="addJointDropdown" id="createJoint">
+			<li><a href="#" data-type="0">Distance Joint</a></li>
+			<li><a href="#" data-type="1">Weld Joint</a></li>
+			<li><a href="#" data-type="2">Revolute Joint</a></li>
+			<li><a href="#" data-type="3">Wheel Joint</a></li>
+		</ul>
+	</div>
 </nav>
 
 <div id="toolbar">
-<ul id="transformTools">
-	<li>--------------------</li>
-	<li class="hint--right" data-hint="Translate" ><a href="#" data-event="activateTranslationTool" id="tool_translation">Translation Tool</a></li>
-	<li>--------------------</li>
-	<li class="hint--right" data-hint="Scale" ><a href="#" data-event="activateScaleTool" id="tool_scale">Scale Tool</a></li>
-	<li>--------------------</li>
-	<li class="hint--right" data-hint="Rotate" ><a href="#" data-event="activateRotationTool" id="tool_rotation">Rotation Tool</a></li>
-	<li>--------------------</li>
-</ul>
-
-<ul id="pivotTools">
-	<li>--------------------</li>
-	<li class="hint--right" data-hint="Local" ><a href="#" data-event="activateLocalPivotMode" id="pivot_local_select">Local Mode</a></li>
-	<li>--------------------</li>
-	<li class="hint--right" data-hint="Selection"><a href="#" data-event="activateSelectionPivotMode" id="pivot_selection_select">Selection Mode</a></li>
-	<li>--------------------</li>
-</ul>
-
+	<div id="transformTools">
+		<button type="button" class="btn btn-default glyphicon glyphicon-move"  		id="tool_translation" 	data-event="activateTranslationTool"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-fullscreen" 	id="tool_scale" 		data-event="activateScaleTool"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-refresh"  		id="tool_rotation" 		data-event="activateRotationTool"></button>
+	</div>
+	<button type="button" class="btn btn-default separator"></button>
+	<div id="pivotTools">
+		<button type="button" class="btn btn-default glyphicon glyphicon-move"  id="pivot_local_select" 	data-event="activateLocalPivotMode"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-th-large"  id="pivot_selection_select" data-event="activateSelectionPivotMode"></button>
+	</div>
 </div>
 
-<div id="xyInput" style="position:absolute;top:95%;left:75%;">
-x: <input type="text" id="input_x" size="4">
-y: <input type="text" id="input_y" size="4">
+<div id="xyInput">
+	<div class="input-group">
+		<span class="input-group-addon" id="input_x-addon">x</span>
+		<input type="text" class="form-control" id="input_x" size="4" aria-describedby="input_x-addon">	
+	</div>
+	<div class="input-group">
+		<span class="input-group-addon" id="input_y-addon">y</span>
+		<input type="text" class="form-control" id="input_y" size="4" aria-describedby="input_y-addon">
+	</div>
 </div>
 
 <div id="selection_properties">
-	<table id="shape_properties" style="background:#111; color:#fff;" title="Shape">
+	<table id="shape_properties">
 	<caption>---------SHAPE---------</caption>
 	<tr>
 		<td>
@@ -133,7 +138,7 @@ y: <input type="text" id="input_y" size="4">
 
 </table>
 
-<table id="body_properties" style="background:#111; color:#fff;">
+<table id="body_properties">
 	<caption>---------BODY---------</caption>
 	<tr>
 		<td>
@@ -252,7 +257,7 @@ y: <input type="text" id="input_y" size="4">
 
 </table>
 
-<table id="joint_properties" style="background:#111; color:#fff;">
+<table id="joint_properties">
 	<caption>---------JOINT---------</caption>
 	<tr>
 		<td>
@@ -386,6 +391,7 @@ y: <input type="text" id="input_y" size="4">
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
 <script type="text/javascript" src="js/box2d.js"></script>
+<script type="text/javascript" src="js/bootstrap.min.js"></script>
 <script type="text/javascript" src="js/PolygonHelper.js"></script>
 <script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/SceneManager.js"></script>
