adds world loader for libgdx

--- a/index.html
+++ b/index.html
@@ -72,7 +72,7 @@
 	</div>
 	<button type="button" class="btn btn-default separator"></button>
 	<div id="pivotTools">
-		<button type="button" class="btn btn-default glyphicon glyphicon-move"  id="pivot_local_select" 	data-event="activateLocalPivotMode"></button>
+		<button type="button" class="btn btn-default glyphicon glyphicon-screenshot"  id="pivot_local_select" 	data-event="activateLocalPivotMode"></button>
 		<button type="button" class="btn btn-default glyphicon glyphicon-th-large"  id="pivot_selection_select" data-event="activateSelectionPivotMode"></button>
 	</div>
 </div>
