bug fixes in bodies property view

--- a/index.html
+++ b/index.html
@@ -191,6 +191,15 @@
 
 	<tr>
 		<td>
+			<p>Rotation Fixed</p>
+		</td>
+		<td>
+			<p><input type="checkbox" data-property="isFixedRotation"></p>
+		</td>
+	</tr>
+
+	<tr>
+		<td>
 			<p>Edit Body</p>
 		</td>
 		<td>
