adds support for pulley joint

--- a/index.html
+++ b/index.html
@@ -60,6 +60,7 @@
 			<li><a href="#" data-type="1">Weld Joint</a></li>
 			<li><a href="#" data-type="2">Revolute Joint</a></li>
 			<li><a href="#" data-type="3">Wheel Joint</a></li>
+			<li><a href="#" data-type="4">Pulley Joint</a></li>
 		</ul>
 	</div>
 </nav>
@@ -409,8 +410,8 @@
 
 <!-- js-scripts -->
 <script type="text/javascript" src="js/jquery.js"></script>
-<script type="text/javascript" src="js/box2d.js"></script>
 <script type="text/javascript" src="js/bootstrap.min.js"></script>
+<script type="text/javascript" src="js/box2d.js"></script>
 <script type="text/javascript" src="js/PolygonHelper.js"></script>
 <script type="text/javascript" src="js/Body.js"></script>
 <script type="text/javascript" src="js/SceneManager.js"></script>
